Wed Nov 27 02:20:13 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_hash): should not ignore the rest of recursive
	  constructs.

	* hash.c (rb_hash_hash): ditto.

	* range.c (range_hash): ditto.

	* struct.c (rb_struct_hash): ditto.

	* test/-ext-/test_recursion.rb (TestRecursion): separate from
	  test/ruby/test_thread.rb.

Tue Nov 26 22:43:36 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash): cut off if recursion detected to get rid of stack
	  overflow.  [ruby-core:58567] [Bug #9151]

Tue Nov 26 20:02:39 2013  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_settracefunc.rb: add tests for a_call/a_return
	  by Brandur <brandur@mutelight.org> [Feature #9120]

Tue Nov 26 19:29:52 2013  Koichi Sasada  <ko1@atdot.net>

	* common.mk: add useful config "set breakpoint pending on"
	  for run.gdb.

Tue Nov 26 19:17:47 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c (newobj_i): skip class_path if class
	  is frozen.

	  rb_class_path() can modify frozen classes (and causes errors).
	  This patch is temporary. We need no-modification/no-allocation
	  class path function.

Tue Nov 26 18:12:13 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: skip "exception check" and "reentrant check (only normal
	  events)  for internal events.

	  Reentrant check for internal events are remaining.

Tue Nov 26 17:38:16 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c: prohibit to specify normal events and internal events
	  simultaneously.
	  I will introduce special care for internal events later.

	* ext/-test-/tracepoint/tracepoint.c: test this behavior.

	* test/-ext-/tracepoint/test_tracepoint.rb: ditto.

Tue Nov 26 16:30:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_readlink): fix buffer overflow on a long symlink. since
	  rb_str_modify_expand() expands from its length but not its capacity,
	  need to set the length properly for each expansion.
	  [ruby-core:58592] [Bug #9157]
